--- a/boot-camp/note/January/22_01_06_Thu.md
+++ b/boot-camp/note/January/22_01_06_Thu.md
@@ -1,7 +1,197 @@
 # [22.01.06.Thu] - Day 02
 
-##
+## _개발 환경 구성_
+
+- Node.js 설치
+  - [Node.js](https://nodejs.org/ko/download/)
+  - LTS, current version 상관 없음
+  - node.js 책에서 설치 내용 참고
+- VS Code 설치 (개발 도구)
+  - [VS Code](https://code.visualstudio.com/download)
+- Github
+  - 소스 코드 변경 이력 관리
+  - 공동 작업 유용한 환경
+- Github Desktop, source tree
+- 깃헙 레포지토리 생성, github desktop 이용하여 열기
+- VS Code Extension
+  - html snippets
+    - snippet; 개발자가 자주 사용하는 코드 블록을 미리 등록하여 편리하게 재사용
+      - 특정 키워드만 입력해서 코드 자동 완성
+  - html css support
+  - JavaScript (ES6) code snippets
+  - eslint; js code 문법 사전 체크
+  - Live Server; 실제 가상 웹 서버 구동
+  - prettier; code formatter
+    - settings - formatter - default formatter, format on save
+  - git graph
+  - git history
+
+## _HTML_
+
+- 모든 웹 사이트 내부적으로 html 파일로 만들어짐
+- HTML; HyperText Markup Language
+- HTML; 웹페이지의 뼈대
+- CSS; 외형적인 디자인
+- `<!DOCTYPE html>`
+  - HTML 최상위 줄 항상 기입
+  - 예전에는 HTML 버전마다 기입하는 방법 달랐음
+  - 하지만 이제는 하나로 고정, 통일됨
+  - HTML 무조건 최신버전이다 라는 것을 의미하는 태그임!
+  - HTML이 이러한 버전으로 작성되어 있다 라고 HTML 리더기나 검색 엔진한테 알려줌
+- HTML은 시작태그와 종료태그가 있음
+- HTML 태그로 항상 감싸줘야 함!
+- `<html></html>`
+
+  - `<html lang="en">`
+    - lang이란?
+    - 검색 엔진이 우리 웹사이트 읽어들일 때 컨텐츠 글자 내용을 해당 언어로 판단
+      - "en"으로 설정하면 한글은 해석 못하고 영어만 해석 가능
+    - 시각 장애인 분들 위함 => 리더기가 body 내용 읽어줘야 하는데 <br/>
+      영어는 잘 읽어주지만 한글은 잘 못 읽어줌
+    - 만약 html의 lang을 "ko"로 설정하면 <br/>
+      body 내에서 영어 작성하면 속성으로 lang="en"로 설정해야 검색엔진이 읽어줄 수 있음
+
+- `<head></head>`
+  - 페이지에 대한 부가적인 옵션 등 설정
+  - CSS도 세팅
+  - 전체 페이지를 구동하고 설정하고 설명하는데 필요한 정보 담음
+  - head 태그 안에 meta 태그의 charset 속성 값으로 utf-8로 해야 <br/>
+    웹페이지의 한글, 특수문자 등 안꺠짐! (인코딩)
+  - meta http-equip; IE 버전 호환
+  - name="viewport" content="width=device-width, initial-scale=1.0"
+    - 모바일 기기로 웹 사이트 접속 시 사이즈 맞춰서 잘 설정해줌
+    - 자동으로 scale 해줌 (좌우 스크롤할 필요 없음)
+    - 만약 이 태그 없애면 자동 스크롤 해야 함..
+    - 사용자 device 기준으로 무조건 1:1로 사이즈 맞춤
+    -
+- `<body></body>`
+  - 웹 페이지 컨텐츠는 모두 body 태그 안에 넣음
+  - 화면 실제로 만들기 위한 내용들을 넣음 (화면 작성하는데 필요한 모든 태그들)
+- 태그의 속성 (attribute)
+  - 태그의 부가적인 정보 기입
+  - 공통적인 속성 정보가 있고, 특정 태그에만 사용할 수 있는 속성 정보도 있음
+  - 속성에 값 설정 가능
+- HTML 파일 열기
+  - HTML 파일 물리적으로 절대 경로 (file path)로 열면 실행 안되는 코드가 있을 수 있음
+  - Live Server 이용
+    - open with live server
+    - 웹 서버로 띄워줌
+- html은 원래 문서로 작성했던 것을 웹으로 보여주기 위한 용도
+  - 워드에서 작성했던 서식에 해당하는 태그가 대부분임
+  - HTML element (요소)를 html 태그를 통해서 만듦!
+  - HTML element (HTML tag)
+- h 태그; 머릿말 (h1 ~ h6)
+- div 태그;
+- 여러 방식을 이용하여 눈에 똑같이 비슷하게 보이게 만들 수 있음
+  - ex. 머릿말을 h 태그가 아니라 div 태그 이용해서 작성한다면?
+  - 보이는건 비슷해보일 수 있지만 검색 엔진이 인식 불가!
+  - 검색 엔진이 이 페이지의 제목에 해당하는 중요한 text 구나 인식을 못함
+  - 따라서 태그를 적절하게 잘 써야 함!!!
+  - 마찬가지로 스크린 리더기도 다르게 취급함
+- HTML에는 유사한 태그들이 정말 많음
+  - 보이는 컨텐츠를 의도에 맞는 태그를 잘 활용해야 함!
+  - 의미 없는 태그를 가지고 생각없이 디자인하면 안됨
+  - semantic 태그 잘 사용하기
+  - 예전 방식으로 태그 계속 사용하면 SEO에 의해 노출 빈도수 줄어듦
+  - 장애인분들을 위한 것이 아님
+- 주석; `Ctrl + /`
+  - 프로그래밍 코드 작성하면 항상 주석 다는 것을 습관적으로 사용!
+  - 내가 짠 코드 설명 위한 용도
+    - 무엇을 작성했고, 어떤 것을 유의하고, 어떻게 사용하면 되는지 등 설명
+  - 또는 잠깐 코드 실행되지 않도록 막는 용도
+- p 태그; paragraph
+  - 하나의 문장을 의미
+  - 문장 단위
+- img 태그
+  - 시작 태그만 있고 종료 태그가 없음
+  - empty 요소라고 부름
+  - 왜 code snippet에서 src와 alt 속성만 나올까?
+  - src 속성; 이미지의 주소 (URL, 파일로 관리되는 주소)
+    - 절대 경로
+    - 상대 경로; 파일 상대적 위치 기준
+  - alt 속성; 이미지 안나왔을 때 보충 설명하는 용도
+    - 대체 텍스트
+    - 시각 장애인 분들 위해 스크린 리더기가 읽어줄 때 중요함!
+    - alt 속성 매우 중요함!!! => 사용자를 위하고, 검색 엔진을 위해서도...
+    - SEO가 img 만나면 alt 속성을 보고 img url과 alt를 mapping해서 indexing 처리함 (내부적으로)
+  - img 태그에는 height와 width 속성 가짐! (다른 태그에는 없음)
+- 모든 태그는 in-line 요소와 block 요소로 구분
+  - in-line 요소
+    - ex. span 태그, img 태그, a 태그,
+  - block 요소 (한 칸 전체 차지)
+    - ex. p 태그, h 태그, div 태그,
+- 모든 HTML에는 style 속성을 사용할 수 있음!
+  - html 속성에 style 사용해서 스타일 입히는 방식 => in-line style 방식
+  - 모든 모니터는 해상도를 가지고 있음
+  - 해상도; 수많은 네모칸으로 이루어져 있음 => 픽셀(점)
+  - 이미지 기준으로 width, height 설정 가능 (style 설정 내에서)
+- a 태그; 링크 담당하는 HTML 태그
+  - href; URL 주소
+  - target 속성; 새 창으로 열기 등 설정 가능
+    - `_blank`; 새 탭으로 열기
+    - 제대로된 속성 값 사용해야 SEO가 제대로 크롤링해서 이해 가능!
+- br 태그 (break, 한 줄 break 하겠다!)
+  - 눈에 안보임
+  - 한 줄만 바꿔주는 용도임!
+- 무조건 모든 태그의 자식으로 넣을 수 있는 건 아님
+- 3가지 동일하게 보이는 예제
+  - style 속성 값으로 bold
+  - strong 태그
+    - 스크린 리더기가 강하게 읽어줌!
+    - 검색 엔진이 강조하는 것이니 우선순위 더 높다고 판단함
+  - b 태그
+- 기본적인 스타일에 대한 속성은 하나의 값만 가짐
+  - 유일하게 style 속성은 여러개의 값 가질 수 있음 (세미콜론 이용해서)
+  - color 속성은 글자색
+  - 실무에서는 html에 inline style 속성으로 작성하지 않음
+  - 페이지 여러개 있으면 일일이 다 업데이트 하는 불편함...
+  - css를 한 곳에서 관리할 수 있도록 해줌!
+    - 하지만 퍼블리셔가 아주 가끔 그곳에만 스타일 적용하려고 인라인 스타일 방식 사용할 수도 있음
+  - background 속성, font-family (폰트체)
+  - text-align 속성
+- 인라인 태그는 그 크기만큼만 스타일 적용되고, <br/>
+  블록 태그는 무조건 한 칸 다 차지함
+- i 태그 vs. em 태그
+  - i 태그
+  - em 태그; 이탤릭체 만들어 주면서 emphasize - 강조해줌
+    - 이탤릭체 쓰면서 컨텐츠적으로 강조해야 한다 => em 태그 사용
+    - 그냥 이탤릭체만 사용할거면 i 태그 사용하면 됨
+- small 태그; 원래 있는 태그 크기보다 작게
+- mark 태그; 형광펜 역할
 
 #
 
 ### [Note]
+
+- 127.0.0.1 와 localhost 는 같은 의미
+- 검색 엔진, 스크린 리더기 (사용자) 고려!
+- 웹 퍼블리셔가 HTML, CSS 대부분 만들어주고 <br/>
+  개발자는 그걸 받아서 개발 시작함! (맨땅 시작은 거의 없음)
+  - 개발자는 무에서 유를 창조한다기 보다는 기존 것을 가져오고 수정하는 능력이 더 중요!
+  - 나중에 개발자는 직접 디자인을 수정할 경우 많이 생김 <br/>
+    (직접 만들기 X)
+- HTML/CSS 는 W3School 문서 참고!
+  - HTML 연습, 퀴즈 등 해보기!
+- JS는 MDN 참고
+- 웹 접근성 중요함!
+  - 특히 공공기관
+  - ex. 장애인분이 이용하는데 너무 불편하도록 하면 안됨
+  - 웹 접근성 지키는 방식 여러가지 있음 => 잘 준수해야 함!
+  - html 태그 관련 규칙 반드시 준수!
+- 깃헙
+  - 커밋 snapshot을 최대한 분할해서 하기!
+  - commit 을 잘 남기는 것이 중요! (push는 나중에 천천히 한번에 해도 됨)
+  - 커밋 시점 매우 중요! => 나중에 코드 되돌리고 싶은 중요 시점이 있을 수 있음
+  - 커밋하는 시점이 개발자에게 매우 중요!
+  - 깃헙 커밋 규칙으로 prefix 달아 두는 습관!!
+    - INITIAL
+    - ADD
+    - UPDATE
+    - REMOVE
+    - DESIGN
+    - REFACTOR 등...
+- git sync change
+
+#
+
+### [Source Code](https://github.com/ding-co/developer-dignity/tree/main/boot-camp/practice/January/day02)
