[UPDATE] boot-camp: 22_01_04_Thu (note)

--- a/boot-camp/note/January/22_01_06_Thu.md
+++ b/boot-camp/note/January/22_01_06_Thu.md
@@ -50,6 +50,8 @@
       영어는 잘 읽어주지만 한글은 잘 못 읽어줌
     - 만약 html의 lang을 "ko"로 설정하면 <br/>
       body 내에서 영어 작성하면 속성으로 lang="en"로 설정해야 검색엔진이 읽어줄 수 있음
+    - html lang 설정과 OS 언어 설정 비교해서 구글 크롬 자체가 <br/>
+      OS 언어와 다르면 번역 translate 뜸!
 
 - `<head></head>`
   - 페이지에 대한 부가적인 옵션 등 설정
@@ -191,6 +193,9 @@
     - DESIGN
     - REFACTOR 등...
 - git sync change
+- 나중에 검색 엔진 위해 head 태그 안에 description 잔뜩 만들어야 함
+- 내부 시스템은 검색 엔진에 걸리지 않도록 해야함!
+- 구글 개발자 도구 - lighthouse 기본 탑재 => SEO 성능 확인 가능
 
 #
 
