[UPDATE] boot-camp 22_01_01_Thu (note)

--- a/boot-camp/note/January/22_01_06_Thu.md
+++ b/boot-camp/note/January/22_01_06_Thu.md
@@ -58,14 +58,13 @@
   - CSS도 세팅
   - 전체 페이지를 구동하고 설정하고 설명하는데 필요한 정보 담음
   - head 태그 안에 meta 태그의 charset 속성 값으로 utf-8로 해야 <br/>
-    웹페이지의 한글, 특수문자 등 안꺠짐! (인코딩)
+    웹페이지의 한글, 특수문자 등 안깨짐! (인코딩)
   - meta http-equip; IE 버전 호환
   - name="viewport" content="width=device-width, initial-scale=1.0"
     - 모바일 기기로 웹 사이트 접속 시 사이즈 맞춰서 잘 설정해줌
     - 자동으로 scale 해줌 (좌우 스크롤할 필요 없음)
-    - 만약 이 태그 없애면 자동 스크롤 해야 함..
+    - 만약 이 태그 없애면 좌우 스크롤 해야 함..
     - 사용자 device 기준으로 무조건 1:1로 사이즈 맞춤
-    -
 - `<body></body>`
   - 웹 페이지 컨텐츠는 모두 body 태그 안에 넣음
   - 화면 실제로 만들기 위한 내용들을 넣음 (화면 작성하는데 필요한 모든 태그들)
@@ -119,9 +118,9 @@
   - img 태그에는 height와 width 속성 가짐! (다른 태그에는 없음)
 - 모든 태그는 in-line 요소와 block 요소로 구분
   - in-line 요소
-    - ex. span 태그, img 태그, a 태그,
+    - ex. span 태그, img 태그, a 태그, ...
   - block 요소 (한 칸 전체 차지)
-    - ex. p 태그, h 태그, div 태그,
+    - ex. p 태그, h 태그, div 태그, ...
 - 모든 HTML에는 style 속성을 사용할 수 있음!
   - html 속성에 style 사용해서 스타일 입히는 방식 => in-line style 방식
   - 모든 모니터는 해상도를 가지고 있음
@@ -181,7 +180,7 @@
   - 웹 접근성 지키는 방식 여러가지 있음 => 잘 준수해야 함!
   - html 태그 관련 규칙 반드시 준수!
 - 깃헙
-  - 커밋 snapshot을 최대한 분할해서 하기!
+  - 커밋 snapshot을 적절히 잘 분할해서 하기!
   - commit 을 잘 남기는 것이 중요! (push는 나중에 천천히 한번에 해도 됨)
   - 커밋 시점 매우 중요! => 나중에 코드 되돌리고 싶은 중요 시점이 있을 수 있음
   - 커밋하는 시점이 개발자에게 매우 중요!
