[ADD] Day 07 - JS 02

--- a/boot-camp/note/January/22_01_20_Thu.md
+++ b/boot-camp/note/January/22_01_20_Thu.md
@@ -1,10 +1,88 @@
 # [22.01.18.Thu] - Day 07
 
-##
+## _JavaScript_
+
+- 데이터 타입
+  - 기본 자료형
+    - 문자열; '' 또는 ""로 감싸줘야 함
+      - 문자열끼리 더하기 가능
+    - 숫자; number
+      - 모든 숫자는 내부적으로 다 부동소수점 (실수)으로 표현
+    - 불리언; true/false, 조건식 함께 활용
+    - undefined; 개발자가 직접 사용하는 것이 아님
+      - 변수 선언하고 아직 값을 할당하지 않았을 때, <br/>
+        JS 엔진이 암묵적으로 undefined로 초기화시킴
+    - null; 없다는 의미
+      - 개발자가 직접 제어하는 값
+      - 주소값이 null이면 어떻게 처리하고 등...
+      - 복잡하고 규모 큰 데이터 더이상 사용하지 않을 때 null을 할당하면 <br/>
+        G.C가 사용하지 않는 이 메모리를 비워줌
+    - symbol
+- object
+  - JS는 거의 모든 것이 객체임
+  - 중괄호 { } 이용
+  - 용도; 객체의 속성/행위를 묶어서 정의
+    - 여러 변수에 담아서 관리하기 너무 힘듦
+    - key - value 쌍
+  - 접근 방법
+    - . 이용
+    - [ ] 이용
+    - 위 두가지 차이점은?
+      - JSON 데이터 구조 (서버로부터 특정 데이터 받아옴)
+      - JSON은 키에 무조건 쌍따옴표 사용해야 함
+      - 반드시 [ ] 이용하여 프로퍼티 조회해야 함
+      - 나중에 가져올 데이터 이용할 때는 [ ] 이용
+        - 변수에 할당된 값을 통해 가져올 때
+- array
+  - 연속된 데이터의 집합
+  - 여러 데이터 타입의 값 다 담을 수 있음
+  - 0부터 시작 인덱스 (유럽/미국; 숫자의 시작은 0)
+  - 화면에 컨텐츠 렌더링할 때 배열 형태를 이용해서 보여줌
+  - 데이터 가져올 때도 대부분 배열 형태
+- typeof 연산자
+  - `typeof undefined` // undefined
+  - `typeof null` // object
+  - `typeof [1,2,3]` // object
+- float 64비트 부동 소수점
+  - 0.1 + 0.2 !== 0.3
+  - JS는 모든 숫자를 8 바이트 부동 소수점 수로 관리해서 그럼
+  - 어떤 소수는 무한 소수로 이진법으로 변환하면 64개 셀 안에 다 안들어갈 수 있음
+  - 운이 나쁘면 프로그램에 치명적 오류 발생 가능
+  - 실무에서 bignumber.js 등 사용 (회계 프로그램에 중요하게 작용)
+- 연산자
+  - 산술 연산자
+    - 증/감 연산자, 단항 연산자
+  - 복합 대입 연산자
+  - 비교 연산자
+    - `==`는 타입 비교 안하고 값만 비교
+      - 비교하는 시점에만 숫자로 바꿔서 비교함
+    - `===`는 타입과 값 모두 봄
+    - 최근 ECMA 표준에서는 ===, !== 사용하는 것 권장
+    - ESLint/prettier 에서 체크해줌
+  - 논리 연산자
+  - 조건(삼항) 연산자
+- 조건문
+  - 매우 중요~
+  - if ... else if ... else 문
+  - undefined, null, 0, NaN, ''이 조건식에 있으면 false로 인식
+    - [], {}는 true
 
 #
 
 ### [Note]
+
+- JS는 이해 잘하는 것이 중요!
+- JS 기본기 잘 쌓자!
+- 복습 꾸준히 잘 하자!
+- John Doe; 가상의 인물 대표하는 이름 (해외)
+  - like a 홍길동 (한국)
+- JS에서 90% 이상은 배열, object 사용함
+- 오브젝트의 키를 형성하는 방식은 문자열
+- JS에서 취급하는 가장 큰 숫자 => Number.MAX_SAFE_INTEGER (16자릿수)
+- 0으로 나누면 Infinity
+  - 애플리케이션에서 오류 나면 발견하기 힘든데, <br/>
+    Infinity 값이 나오고 등..
+-
 
 #
 
