--- a/boot-camp/note/February/22_02_08_Tue.md
+++ b/boot-camp/note/February/22_02_08_Tue.md
@@ -2,7 +2,7 @@
 
 ## _Vanilla JS_
 
-- Object Literal
+- Object Literal Syntax Extension
   - object를 선언하면서 키를 동적으로 바인딩
 - Spread Operator
   - 배열의 요소 하나하나 다 분해해서 만들어줌
@@ -14,7 +14,7 @@
   - 1~3개 정도 적은 데이터 가져올 때 유용
 - Array Destructuring
   - 가독성 높음
-  - 지리 정보 관련 라이브러리에서 위도, 경도 받아올 때 활용
+  - 실무) 지리 정보 관련 라이브러리에서 위도, 경도 받아올 때 활용
 - XMLHttpRequest
   - Ajax; 웹의 혁신
     - Asynchronous Javascript and XML
@@ -52,13 +52,13 @@
   - ex. json-server (npm)
     - 반드시 global로 설치해야 함
     - 서버 없이 프론트엔드 개발 가능
-- 상태 코드 200은 정상적으로 데이터 요청했음/수정/삭제
-- 정상적 데이터 생성 201 status
+- 상태 코드 200은 정상적으로 데이터 GET/PUT/DELETE
+- 정상적 데이터 생성 201 status (POST)
 - 최초의 웹은 서버로 요청을 보내면 서버가 응답해주고 <br/>
   클라이언트가 요청하면 서버가 응답해줘야 함
 - Ajax 추가된 이후의 웹은 클라이언트가 요청하고 아직 응답 안왔지만 <br/>
   클라이언트가 여러 번 요청할 수 있음
-- 정적 화면과 동적인 화면 (동적으로 데이터 가져와서 화면 표현)
+- 정적인 화면과 동적인 화면 (동적으로 데이터 가져와서 화면 표현)
 
 #
 
