--- a/boot-camp/note/February/22_02_10_Thu.md
+++ b/boot-camp/note/February/22_02_10_Thu.md
@@ -9,7 +9,7 @@
     - 에러 발생하더라도 멈춰버리지 않고 다음 코드 실행되도록 만들어 줌
     - 예기치 못한 에러 발생하더라도 다음 코드 실행 가능
     - catch 구문에서 에러 잡아서 정보성 에러 표시 (프로그램 중단 X)
-    - ex. 외부에서 제공해주는 API 데이터 받아올 때 에러 생 가능
+    - ex. 외부에서 제공해주는 API 데이터 받아올 때 에러 발생 가능
       - 작은 에러 하나 발생해서 나머지 데이터 모두 표시 안될 수 있음
       - 사용자 경험 안좋게 되는 문제 발생 가능
       - 내가 control 할 수 없는 코드 부분에 한해서만 try catch 구문 작성하기!
@@ -62,7 +62,7 @@
       - 실제로 메일 보내서 확인해서 반송해주는 것 구현하는 것 쉬움
         - 이메일 테스트 서버
         - email-existence 모듈 있음 (npm)
-          - 모든 메일 처리 못하는 단점
+          - 모든 메일 처리 못하는 단점 존재
 - DOM
   - 시작; element 접근 (찾기)
     - id로 접근
@@ -84,7 +84,7 @@
 - 정규식 충분히 이해하기!
   - 정규식 알아도 만드는 것이 쉽지 않음
   - ex. 핸드폰 번호
-- json-server 비슷한 GUI 시각적인 툴인 postman
+- json-server 비슷한 GUI 시각적인 툴인 Postman
 - DOM; Document Object Model
   - DOM 트리
   - html
@@ -94,11 +94,12 @@
 - jQuery에서는 DOM 접근하는 것을 함수로 제공해서 편했었음
 - 궁금증
   - DOM attribute 속성 값 직접 제어 vs. getAttribute('')
+  - 실시간 데이터 여부로 구분됨
 - select 박스에서 세부 select에 대한 정보를 DB로부터 받아오기 전에 disabled => 받아오면 풀도록 처리 가능
 - 시스템에서는 country code로 관리해야 함
   - country list json 정보 제공해주는 외부 라이브러리 있음
   - country list excel
-  - DB에서 excel import 가능
+    - DB에서 excel import 가능
 - 단순한 서비스 구현 하나만으로도 B2B 서비스 운영 가능
 
 #
