[UPDATE] Day 01 ~ Day 10

--- a/boot-camp/note/January/22_01_04_Tue.md
+++ b/boot-camp/note/January/22_01_04_Tue.md
@@ -211,9 +211,9 @@
     - ERP, CRM 관련 용어 조사해보고 글 작성
 - 최대한 예습은 자제하고 교재는 복습 위주로 많이 하기!
 - 즐거워야 오랫동안 성장할 수 있음
-- 수업 외 질문은 깃헙 이슈칸 이용
+- 수업 외 질문은 깃헙 이슈 칸 이용
 - 질문 많이 하면 나중에 선물 있음
-- json server 이용해서 FE에서 실제 프로그램과 동일한 개발 환경 이용 가능
+- json-server 이용해서 FE에서 실제 프로그램과 동일한 개발 환경 이용 가능
 - 모든 css 세분화된 클래스 등 다 써서 하는 테일윈드
   - 디자인 잘 아는 사람한테 유리 + 섬세함 + 자유도 높음
 - 부트스트랩이나 머티리얼은 일부만 알아도 바로 적용 가능
