--- a/boot-camp/note/January/22_01_11_Tue.md
+++ b/boot-camp/note/January/22_01_11_Tue.md
@@ -11,7 +11,7 @@
     - ko로 html에 설정 했으면 다른 영어 등 있는 곳에는 lang="en" 설정
 
   - head 태그
-    - meta charset UTF-8; 여러 언어 깨질 수 있음
+    - meta charset UTF-8; 여러 언어 깨질 수 있는 것 방지
   - body 태그
 
 - 텍스트 서식 관련 태그
@@ -51,7 +51,7 @@
   - 로컬 내부 파일 주소를 절대/상대 경로로 넣어도 가능
   - href 속성으로 #id 현재 페이지 내에서 해당 지점으로 스크롤 (이동)
   - JS 함수 호출도 해줌; href 속성 값으로 javascript:func()
-  - a태그에 href 속성으로 tel:+821000000 세팅하면 <br/>
+  - a태그에 href 속성으로 tel:+821000000000 세팅하면 <br/>
     PC에서는 작동 안하지만 모바일에서는 바로 전화 걸림!!
   - a태그에 href 속성으로 mailto:aaaaa@gmail.com 하면 <br/>
     PC면 outlook이나 default 메일 앱이 실행되고 <br/>
@@ -102,7 +102,7 @@
     - 여러 개의 선택지 중 하나만 선택할 때 활용
     - 같은 그룹이라는 grouping 필요! => name 속성 이용
     - name은 동일한 이름 가질 수 있음
-    - 하나의 질문에 대한 하나의 선택값으로 인식 가능
+    - 하나의 질문에 대한 하나의 선택 값으로 인식 가능
     - checked 속성은 default로 체크되어 있는 상태로 표시 (값은 따로 안넣어도 됨)
     - checked 속성을 JS로 조작할 때는 true/false로 체크 가능하지만 <br/>
       실제 HTML 내에서는 checked="false" 아님 (checked="checked" 형태임)
@@ -143,8 +143,8 @@
     - 초기화 용도
   - type="search"
     - 자동으로 x 표시 나옴
-    - x 누르면 입력값 사라짐
-    - ex. 검색하다가 지울 때 불편함 해소 (입력값 자주 초기화할 때 사용)
+    - x 누르면 입력 값 사라짐
+    - ex. 검색하다가 지울 때 불편함 해소 (입력 값 자주 초기화할 때 사용)
   - type="tel"
     - 전화번호 입력
     - form 요소 안에 있을 때만 제대로된 기능 발휘
@@ -161,9 +161,9 @@
   - JSP 같은 거는 form 태그 안에 있어야 서버로 보낼 수 있음
   - FE 프레임워크는 form 태그 안씀
     - 단점 존재; email type input 기능 사용 불가
-    - 자동으로 이메일 형식 체크 해주는 기능
-      - 체크 가능하려면 반드시 form 태그로 감싸줘야 함
-      - 또 반드시 input type="submit" 할 때만 가능 (form 태그 안에 input type button 안됨)
+      - 자동으로 이메일 형식 체크 해주는 기능
+        - 체크 가능하려면 반드시 form 태그로 감싸줘야 함
+        - 또 반드시 input type="submit" 할 때만 가능 (form 태그 안에 input type button 안됨)
   - input 태그에 required 속성 => 유효 값인지 다 체크해줌
 
 #
@@ -181,7 +181,7 @@
     - https 아니어서 그럼
   - 과거 iframe 태그; 화면 깜빡임 방지 용도 등으로 썼음
     - 만약 iframe 없으면 상단 메뉴에 중복된 코드 다 작성해야 했음 <br/>
-      (만약 페이지로 이동하는 Hard Coding 했을 때 힘들었음..)
+      (페이지로 이동하는 Hard Coding 했을 때 힘들었음..)
 
 - id 속성은 unique함! (중복 불가)
   - 한 HTML 안에서만 적용
@@ -216,8 +216,8 @@
 - input 태그에 disabled 속성은 사용할 수 없는 필드로 바뀜
 - readonly vs. disabled
   - 만약 속성이 form 내부로 들어가면?
-  - readonly면 서버로 데이터 전송됨
-  - disabled는 서버로 데이터 전송 안됨
+    - readonly면 서버로 데이터 전송됨
+    - disabled는 서버로 데이터 전송 안됨
 - input 태그에 maxlength 속성, minlength 속성
   - 글자 수 제한 가능
 - input 태그에 placeholder 속성
