--- a/boot-camp/note/January/22_01_12_Wed.md
+++ b/boot-camp/note/January/22_01_12_Wed.md
@@ -19,7 +19,7 @@
       - 귀찮아서 select 박스 만들어서 활용하는 사람들 많음
       - 아무래도 select 박스 다루기가 간편해서..
       - 하지만 사용자 입장에서는 두 번 클릭하는 번거로움으로 불편함
-      - UX 적으로 선택 옵션 적을 때는 라디오 버튼 이용하자!
+      - UX적으로 선택 옵션 적을 때는 라디오 버튼 이용하자!
     - ex. 태어난 국가 같은 경우에는 라디오 버튼으로 하기에는 무리 (select 이용!)
 - 체크 박스 (틱 박스)
 - textarea; 여러 줄 입력 가능
@@ -43,8 +43,8 @@
   - 문제점; 선택하고도 지울 수가 있음 <br/>
     혹시 사용자가 강제로 지울 수도 있으니 나중에 서버로 전송되는 시점에 <br/>
     사용자가 제대로 입력했는지 추가 로직 작성해야 하는 번거로움 존재
-    - select 인 경우에는 value 값을 통해 코드 값이 실제로 서버로 전송되니 구분 가능!
-  - datalist 눈에 보이는 값만 그대로 사용할 때만 사용하기!
+    - select인 경우에는 value 값을 통해 코드 값이 실제로 서버로 전송되니 구분 가능!
+  - datalist는 눈에 보이는 값만 그대로 사용할 때 사용하기!
   - select box와 차이점
     - select box가 5개밖에 없으면 괜찮음
     - 하지만 200개면 스크롤 하기 너무 부담
@@ -94,7 +94,7 @@
   - 만약 id만 있으면 # 붙여서 사용
     - 대신 id라는 것은 무조건 그 해당 요소 1개만 있음 (unique)
 - 실무에서는 inline style은 거의 안씀 (정말 특별한 경우 제외하고)
-- SCSS 이용하면 보통 변수값으로 활용해서 상속 받아서 사용 가능
+- SCSS 이용하면 보통 변수 값으로 활용해서 상속 받아서 사용 가능
 - 복합 선택자
   - 2개 이상 같이 이용해서 사용
   - `>` 이용해서 찾아가서 바로 밑에 있는 요소 찾아서 디자인 적용 (직계 자식들만 찾음)
@@ -106,7 +106,7 @@
 - 속성 선택자
   - ex. input[type='text']
 - JS의 document.querySelector('') 이용해서 html DOM 요소 접근
-  - querySelector('') 안에 들어가는 것이 css selector하고 문법 동일
+  - querySelector('') 안에 들어가는 것이 CSS Selector하고 문법 동일
   - cf. input[type=text]
 - 가상 클래스 선택자 (수도 클래스)
   - action에 대한 설정 가능
@@ -135,14 +135,16 @@
     - http 메서드
       - GET; 주소 URL에 보임, read
         - 링크 저장할 용도 있고 한번에 찾아갈 때 사용
-      - POST; 주소 URL 안보이도록 보내기, post
-        - 데이터를 조회할 때도 GET, POST 모두 사용 가능
+      - POST; 주소 URL 안보이도록 보내기, POST
+        - 데이터 조회할 때도 GET, POST 모두 사용 가능
         - 조회할 때 POST 방식 쓰면 URL에 안보이게 되서 공유 불가
-        - 누군가 링크 저장해서 바로 들어오면 안되거나 할 떄 post 방식 사용
+        - 누군가 링크 저장해서 바로 들어오면 안되거나 할 떄 POST 방식 사용
         - 유저 이메일, 아이디 등은 URL 주소에 표시 안되고 감추도록 해야할 경우 있음
   - target 속성
     - \_blank; 새 창 열리면서 전송됨
-    - form에서 iframe으로 쏘고 iframe 쪽에서 서버주소 사용함 <br/> (프로그레스바 등 활용해서 UX 높일 수 있음) <br/> (잠시 이동했다가 하얗게 붕 떴다가 다시 돌아오는 불편함 방지)
+    - form에서 iframe으로 쏘고 iframe 쪽에서 서버 주소 사용함 <br/>
+      (프로그레스바 등 활용해서 UX 높일 수 있음) <br/>
+      (잠시 이동했다가 하얗게 붕 떴다가 다시 돌아오는 불편함 방지)
 - formvalidate 속성을 input, form, button 등에 다 넣을 수 있음
   - form에도 novalidate 속성 지정 가능
   - 실무에서 validate 체크 안하는 경우 거의 없긴 함
