--- a/boot-camp/note/January/22_01_18_Tue.md
+++ b/boot-camp/note/January/22_01_18_Tue.md
@@ -12,14 +12,14 @@
   - body 태그 안에 script 태그 안에 작성 <br/>
     (body 태그 안에 style 태그 작성은 불가능)
   - 별도 JS 파일 분리해서 head 태그 안에 import (script:src)
-    - 상대경로 지정
+    - 상대 경로 지정
     - 내가 실행할 순서에 맞게끔 위치 잡아서 가능
 - document.write
   - 화면에 write 하는 JS 내장 함수
 - html 다 만들어지고 나서 그 밑에 js 코드 실행되는 것이 좋음
   - 안그러면 너무 느려질 수 있음 (브라우저 엔진 해석기)
   - 브라우저 해석기가 순차적으로 위에서 아래로 해석함
-    - 코드가 수백 ~ 수천줄이 되면 우선 script 코드를 먼저 해석하게 되면 <br/>
+    - 코드가 수백 ~ 수천줄이 되면 우선 script 코드를 먼저 해석하게 되서 <br/>
       그 다음에 HTML 코드를 해석하면 그 시간 차가 오래 걸릴 수 있음
     - 사용자 입장에서는 특정 사이트에 접속했을 때 화면에 빠르게 보여지는 것이 중요
     - 렌더링이 우선되는 것이 사용자 입장에서 더 중요함
@@ -38,15 +38,15 @@
   - Network 탭
     - 렌더링 되는 속도, 서버로부터 여러 파일 가져오는 속도 다 체크 가능
     - 어떤 파일 가져오는지도 다 확인 가능
-    - 파일을 어떤 형식으로 받아오는 지도 확인 가능
+    - 파일을 어떤 형식으로 받아오는지도 확인 가능
 - 데이터 담는 그릇 => 변수
   - 변수 선언자
     - var
     - 최근에는 대부분 const, let 사용
-      - var 선언자는 재선언이 가능해서 의도하지 않은 코드 작성 가능성
+      - var 선언자는 재선언이 가능해서 의도하지 않은 코드 작성 가능
       - let은 재할당 가능, 하지만 재선언은 불가능
       - const는 재할당, 재선언 불가
-        - const는 절대 변하지 않는 상수값에 많이 활용
+        - const는 절대 변하지 않는 상수 값에 많이 활용
         - const는 무조건 대문자를 사용하고 스네이크 케이스로 연결
   - 변수명 (변수 이름)
     - ex. x
@@ -85,7 +85,7 @@
   - 보안상 모바일 상으로 접속하지 않을 컨텐츠 또는 <br/>
     중요도 떨어지는 컨텐츠는 모바일로 들어왔을 때 감춰버릴 수 있음
   - 모바일 앱으로 파악하기 힘든 컨텐츠를 굳이 넣을 필요 없음
-  - 모바일에 맞는 컨텐츠 배치와 가시적으로 보기 좋은 컨텐츠를 제공
+  - 모바일에 맞는 컨텐츠 배치와 가시적으로 보기 좋은 컨텐츠 제공
   - 글씨 사이즈도 잘 고려해야 함! <br/>
     해상도 줄어들면 글씨 폰트 사이즈 줄여주고 <br/>
     글씨 너무 작으면 크게 만들어 주고 등...
@@ -111,12 +111,12 @@
   - 어디서 에러 나는지 찾기 힘들 때 잠시 코드 실행 막는 용도로 사용 가능
 - DOMContentLoaded 차이?
   - 비슷한 걸로 load 라는 이벤트도 있음
-  - 가끔 DOM 로드되는 것보다 js 코드가 먼저 실행되는 경우도 있음
+  - 가끔 DOM 로드되는 것보다 JS 코드가 먼저 실행되는 경우도 있음
   - 렌더링 이미 다 끝나지 않아서 에러 발생할 수도 있음
-  - 화면 렌더링 되자마자 특정 HTML 요소 접근해서 js 코드 동작해야 한다면 <br/>
-    addEventListener 로 직접 설정하면 가장 안전함!
+  - 화면 렌더링 되자마자 특정 HTML 요소 접근해서 JS 코드 동작해야 한다면 <br/>
+    addEventListener로 직접 설정하면 가장 안전함!
   - 코드의 안정성 높이기!
-- 코드를 짜는 것은 결국 데이터를 처리 하기 위한 목적!
+- 코드를 짜는 것은 결국 데이터를 처리하기 위한 목적!
   - 데이터를 처리하기 위해서는 데이터를 담을 그릇이 필요
   - 데이터를 담는 그릇으로 변수 이용
 - ECMA Script (표준 JS)
