--- a/boot-camp/note/January/22_01_26_Wed.md
+++ b/boot-camp/note/January/22_01_26_Wed.md
@@ -20,7 +20,7 @@
     - 매우 많이 사용
     - 특정 구분자를 기준으로 분리해서 배열 반환
     - 실무) 해시태그, 쉼표 분리
-      - 년월일 분리할 때 매우 편함 (substring보다 더 편함)
+      - 년/월/일 분리할 때 매우 편함 (substring보다 더 편함)
   - startsWith(), endsWith()
     - 문자열이 주어진 매개변수로 시작/끝인지 확인
     - 불리언 값 반환
@@ -61,8 +61,8 @@
   - shift()
     - 배열 맨 앞 요소 빼기
     - 실무) 대량으로 서버에서 고객한테 문자/이메일 발송
-      - 이벤트를 처리하는 큐를 하나 만듦
-      - 사용자 요청들어 올 때 마다 push로 계속 쌓아놓음
+      - 이벤트 처리하는 큐를 하나 만듦
+      - 사용자 요청이 들어 올 때 마다 push로 계속 쌓아놓음
       - 앞에서부터 하나씩 빼면서 이벤트 처리
   - unshift()
     - 배열 맨 앞에 요소 넣기
@@ -93,7 +93,7 @@
     - 여러 곳에 반복해서 화면에 배열 데이터 뿌려줄 때 유용
     - 배열 안의 기존 object 말고 새로운 object 만들어서 반환
     - 서버에서 많은 필드 다 던져주면 네트워크 패킷 비용 증가
-    - 하나 가지고 계속 사용하는 것이 아니라 <br/>
+    - 하나 가지고 여러 곳에서 계속 사용하는 것이 아니라 <br/>
       서버에서 클라이언트로 상황에 맞는 필요한 object 만들어서 던져주면 훨씬 구현 편해짐
   - reduce()
     - 합 구할 때 많이 사용
