--- a/boot-camp/note/January/22_01_27_Thu.md
+++ b/boot-camp/note/January/22_01_27_Thu.md
@@ -7,10 +7,9 @@
   - Set 객체
     - 배열처럼 데이터의 집합.
     - 순서가 없음
-    - value 값이 무조건 유일한 값만 유지
-    - 유일한 값 보장
+    - value 값이 무조건 유일한 값만 유지 (유일한 값 보장)
     - 메서드
-      - has; 불리언 값 반환 (원하는 요소 찾을 때 유용, 배열에서도 활용)
+      - has; 불리언 값 반환 (원하는 요소 찾을 때 유용, 배열에서도 활용 가능)
       - delete
       - clear
   - Map 객체
@@ -76,7 +75,7 @@
     - ex. 테이블 상세 보기
   - setTimeout / clearTimeout
     - 지정된 특정 시간 지난 후에 실행
-    - ex. 광고, 휴대폰 인증, ...
+    - ex. 광고, 휴대폰 인증(3분), ...
     - 실무) 조회 버튼 누르는 순간 눈깜짝할 새 innerHTML DOM에 렌더링
       - 밑에 코드가 먼저 실행되서 null 뻑 날 수 있음
       - setTimeout 이용해서 코드 짬
@@ -89,17 +88,17 @@
 - 고급 문법
   - this
     - 일반 함수 내에서는 window
-    - 객체 리터럴 내 메서드에서의 this는 객체 자체
+    - 객체 리터럴 내 메서드에서의 this는 객체 그 자체
     - 이벤트 핸들러 내의 this는 이벤트 달린 해당 DOM 요소
   - 스코프
     - 선언된 변수에 대한 접근성
-    - 함수 밖에 선언된 변수는 함수 안이든 밖이든 다 참조 가능
-    - 함수 안에 선언된 변수는 함수 안에서만 참조 가능 (밖에서는 참조 불가)
+    - Global Scope; 함수 밖에 선언된 변수는 함수 안이든 밖이든 다 참조 가능
+    - Local Scope; 함수 안에 선언된 변수는 함수 안에서만 참조 가능 (밖에서는 참조 불가)
     - 다른 스코프에서는 동일한 이름의 변수 선언 가능
   - 기본 매개변수
   - 나머지 매개변수
     - 파라미터 개수 제한 X
-    - 자동으로 배열로 다 들어감
+    - 자동으로 배열에 다 들어감
   - 화살표 함수
   - 템플릿 리터럴
 
@@ -110,8 +109,8 @@
 - ECMAScript (JS 표준)
 - 이터러블; forEach 메서드 사용 가능 (ex. set, map, ...)
 - 배열에서 요소 찾을 때 includes 메서드는 내부적으로 for-loop 돎 <br/>
-  set 객체로 바꿔서 has 메서드 이용하는 것이 훨씬 빠름
-- 유일한 요소 모을 때 Object의 key는 unique하다는 특성 이용하면 활용 가능
+  배열을 set 객체로 바꿔서 has 메서드 이용하는 것이 훨씬 빠름
+- 유일한 요소 모을 때 Object의 key는 unique하다는 특성 이용해서 활용 가능
 - UX 중요한 부분 오른쪽으로 가도록 바뀜 (버튼 - 취소 / 확인)
 - 채팅은 HTTP 통신이 아닌 소켓 통신을 함
   - 서로 연결되어 있어서 양방향 통신 가능
