--- a/boot-camp/note/January/22_01_06_Thu.md
+++ b/boot-camp/note/January/22_01_06_Thu.md
@@ -90,7 +90,7 @@
   - 따라서 태그를 적절하게 잘 써야 함!!!
   - 마찬가지로 스크린 리더기도 다르게 취급함
 - HTML에는 유사한 태그들이 정말 많음
-  - 보이는 컨텐츠를 의도에 맞는 태그를 잘 활용해야 함!
+  - 보이는 컨텐츠를 의도에 맞게 태그를 잘 활용해야 함!
   - 의미 없는 태그를 가지고 생각없이 디자인하면 안됨
   - semantic 태그 잘 사용하기
   - 예전 방식으로 태그 계속 사용하면 SEO에 의해 노출 빈도수 줄어듦
@@ -112,7 +112,7 @@
     - 상대 경로; 파일 상대적 위치 기준
   - alt 속성; 이미지 안나왔을 때 보충 설명하는 용도
     - 대체 텍스트
-    - 시각 장애인 분들 위해 스크린 리더기가 읽어줄 때 중요함!
+    - 시각 장애인분들 위해 스크린 리더기가 읽어줄 때 중요함!
     - alt 속성 매우 중요함!!! => 사용자를 위하고, 검색 엔진을 위해서도...
     - SEO가 img 만나면 alt 속성을 보고 img url과 alt를 mapping해서 indexing 처리함 (내부적으로)
   - img 태그에는 height와 width 속성 가짐! (다른 태그에는 없음)
@@ -142,10 +142,10 @@
     - 검색 엔진이 강조하는 것이니 우선순위 더 높다고 판단함
   - b 태그
 - 기본적인 스타일에 대한 속성은 하나의 값만 가짐
-  - 유일하게 style 속성은 여러개의 값 가질 수 있음 (세미콜론 이용해서)
+  - 유일하게 style 속성은 여러 개의 값 가질 수 있음 (세미콜론 이용해서)
   - color 속성은 글자색
   - 실무에서는 html에 inline style 속성으로 작성하지 않음
-  - 페이지 여러개 있으면 일일이 다 업데이트 하는 불편함...
+  - 페이지 여러 개 있으면 일일이 다 업데이트 하는 불편함...
   - css를 한 곳에서 관리할 수 있도록 해줌!
     - 하지만 퍼블리셔가 아주 가끔 그곳에만 스타일 적용하려고 인라인 스타일 방식 사용할 수도 있음
   - background 속성, font-family (폰트체)
@@ -169,7 +169,7 @@
 - 웹 퍼블리셔가 HTML, CSS 대부분 만들어주고 <br/>
   개발자는 그걸 받아서 개발 시작함! (맨땅 시작은 거의 없음)
   - 개발자는 무에서 유를 창조한다기 보다는 기존 것을 가져오고 수정하는 능력이 더 중요!
-  - 나중에 개발자는 직접 디자인을 수정할 경우 많이 생김 <br/>
+  - 나중에 개발자가 직접 디자인을 수정할 경우는 많이 생김 <br/>
     (직접 만들기 X)
 - HTML/CSS 는 W3School 문서 참고!
   - HTML 연습, 퀴즈 등 해보기!
