--- a/boot-camp/note/January/22_01_13_Thu.md
+++ b/boot-camp/note/January/22_01_13_Thu.md
@@ -8,7 +8,7 @@
   - RGB 색상 (각 색상 값; 0~255)
     - 색상 디테일 설정 가능
     - rgba; a는 alpha 값 (투명도)
-    - VS Code extension; css 서포터
+    - VS Code extension; CSS 서포터
   - HEX 값 이용 (16진수 표기법)
     - red, green, blue 조합 이용
     - 실무에서 alpha 값 줄때는 무조건 rgba 방식 이용
@@ -41,13 +41,13 @@
     - border 색상
   - border
     - 실무에서 대부분 한 줄로 축약함
-    - border-width border-style border-color 순서 반드시 지키기!
+    - `border-width border-style border-color` 순서 반드시 지키기!
   - border-radius
     - px, % 등 가능
     - border 둥그랗게 설정 (각도)
 - width, height 관련 속성
   - %로 하면 현재 보고 있는 브라우저 사이즈 기준으로 비율 지정
-  - px로 하면 사람마다 컴퓨터 스크린 사이즈 다르기 때문에 무조건 % 단위로 설정!
+  - px로 하면 사람마다 컴퓨터 스크린 사이즈 다르기 때문에 무조건 %단위로 설정!
   - width 속성
   - height 속성
   - max-width 속성
@@ -67,7 +67,7 @@
     - 자식 노드 수 많아지고 내부 박스의 margin 기준으로 세팅했다면 <br/>
       자식 사이에 margin 도 생겨서 문제 발생 가능 <br/>
       => 부모 요소의 padding 기준으로 디자인 설정!
-  - margin/padding-top/right/bottom/left 세부 설정 가능
+  - margin, padding-top/right/bottom/left 세부 설정 가능
 - Text에 적용할 수 있는 클래스
   - text-align 속성 (정렬 세팅 가능)
     - left(기본값), right, center
@@ -106,7 +106,7 @@
   - list-style-type
     - circle; 안에 빈 동그라미
     - decimal; 숫자 순서대로
-    - disc; 기본 안에 채워진 동그라미
+    - disc; default, 안에 채워진 동그라미
     - lower-roman; 소문자 로마자 (성냥개비)
     - upper-roman; 대문자 로마자
 - 테이블 스타일 속성
@@ -176,9 +176,9 @@
   - 최소 가시적으로 볼 수 있는 이미지 사이즈 설정 가능
 - 브라우저마다 text font size, 떨어져 있는 간격 등 기본값이 있음
   - 실제 디자인상으로는 따로 값이 있지는 않음
-- 디자인 속성값 중첩되면 브라우저마다 기본 세팅되어 있음
+- 디자인 속성 값 중첩되면 브라우저마다 기본 세팅되어 있음
   - 아마 세부 설정 가능한 옵션이 있을 것임
-- 서로 다른 요소 쉼표로 연결해서 함께 묶어서 스타일 지정 가능
+- 서로 다른 요소들은 쉼표로 연결해서 함께 묶어서 스타일 지정 가능
 - 클래스에 대한 CSS 모두 세분화 해서 짤 수도 있지만 공통적인 부분만 구성하고 <br/>
   다른 추가적인 부분은 디자인 유틸리티성으로 구성해서 여러 개 조합 가능 <br/>
   (부트스트랩 방식이 다 이렇게 되어 있음)
@@ -193,19 +193,19 @@
   - 부트스트랩 같은 디자인 시스템 사용하면 편리함!
   - 부트스트랩 <- 반응형에 최적화된 디자인 시스템
 - CSS
-- Vue 에서는 html, css 코드 그대로 넣음
-  - Vue는 html, css, js 영역 완벽히 분리되어 있음
+- Vue 에서는 HTML, CSS 코드 그대로 넣음
+  - Vue는 HTML, CSS, JS 영역 완벽히 분리되어 있음
   - Vue의 styld 컴포넌트 권장 X <br/>
     (JS에서 스타일 지정하는 것 권장 X)
-- React는 JS에서 html, css, js 모두 핸들링 해야 함
+- React는 JS에서 HTML, CSS, JS 모두 핸들링 해야 함
   - 초보자가 능숙하게 잘 사용하기 너무 어려움
-  - html, css, js 다 잘 알아야 함
+  - HTML, CSS, JS 다 잘 알아야 함
   - 디자인 변경 필요해서 디자이너가 다시 만들어주면, <br/>
     또 React 개발자가 일일이 스타일에 맞게 수정해야 함
 - REST API; 서버단에서 데이터 조회하기 위해 제공하는 API 방식
-  - form - GET, POST는 클라이언트 단에서 API 호출할 때 어떤 방식으로 호출할지에 대한 방식
+  - 폼 - GET, POST는 클라이언트 단에서 API 호출할 때 어떤 방식으로 호출할지에 대한 방식
 - 기업마다 표준 디자인 스타일 가이드 있음
-  - 그 가이드를 바탕으로 웹 디자이너가 디자인 퍼블리시 만듦
+  - 그 가이드를 바탕으로 웹 디자이너가 디자인 퍼블리싱 만듦
   - 이후 개발자가 JS로 동작 기능 추가 (+ 디자인 변형 작업도 함)
 - 다음 시간에 HTML+CSS 연습! (+ 반응형 디자인까지)
   - 개인 포트폴리오 웹 사이트 비슷하게 만들 예정 (0.5 ~ 1h)
