--- a/boot-camp/note/January/22_01_20_Thu.md
+++ b/boot-camp/note/January/22_01_20_Thu.md
@@ -7,7 +7,7 @@
     - 문자열; '' 또는 ""로 감싸줘야 함
       - 문자열끼리 더하기 가능
     - 숫자; number
-      - 모든 숫자는 내부적으로 다 부동소수점 (실수)으로 표현
+      - 모든 숫자는 내부적으로 다 부동소수점수(실수)로 표현
     - 불리언; true/false, 조건식 함께 활용
     - undefined; 개발자가 직접 사용하는 것이 아님
       - 변수 선언하고 아직 값을 할당하지 않았을 때, <br/>
@@ -18,7 +18,7 @@
       - 복잡하고 규모 큰 데이터 더이상 사용하지 않을 때 null을 할당하면 <br/>
         G.C가 사용하지 않는 이 메모리를 비워줌
     - symbol
-- object
+- Object
   - JS는 거의 모든 것이 객체임
   - 중괄호 { } 이용
   - 용도; 객체의 속성/행위를 묶어서 정의
@@ -45,10 +45,10 @@
   - `typeof [1,2,3]` // object
 - float 64비트 부동 소수점
   - 0.1 + 0.2 !== 0.3
-  - JS는 모든 숫자를 8 바이트 부동 소수점 수로 관리해서 그럼
-  - 어떤 소수는 무한 소수로 이진법으로 변환하면 64개 셀 안에 다 안들어갈 수 있음
+  - JS는 모든 숫자를 8바이트 부동 소수점 수로 관리해서 그럼
+  - 어떤 소수는 무한 소수로 이진법으로 변환하면 64개 셀 안에 다 안 들어갈 수 있음
   - 운이 나쁘면 프로그램에 치명적 오류 발생 가능
-  - 실무에서 bignumber.js 등 사용 (회계 프로그램에 중요하게 작용)
+  - 실무에서 bignumber.js 등 사용 (회계 프로그램에 중요하게 작용 가능)
 - 연산자
   - 산술 연산자
     - 증/감 연산자, 단항 연산자
@@ -82,7 +82,6 @@
 - 0으로 나누면 Infinity
   - 애플리케이션에서 오류 나면 발견하기 힘든데, <br/>
     Infinity 값이 나오고 등..
--
 
 #
 
