--- a/boot-camp/note/January/22_01_25_Tue.md
+++ b/boot-camp/note/January/22_01_25_Tue.md
@@ -17,9 +17,9 @@
     - object 프로퍼티
   - for-of
     - 배열 요소
-    - 문자열 문자
+    - 문자열의 문자
   - while문
-    - do ... while 문
+    - do...while 문
     - 반복 횟수 모를 때 while문 매우 유용
 - 함수
   - 반복적으로 사용되는 특정 기능 수행하는 하나의 실행 단위
@@ -43,7 +43,7 @@
     - length 프로퍼티
     - indexOf 메서드
       - 사용자가 입력한 문자 있는지 체크 위한 용도 (tel; -)
-      - 몇번째에 있는지 찾기 보다는 입력한 키워드 또는 문자 있는지 알고 싶음!ㄴ
+      - 몇 번째에 있는지 찾기보다는 입력한 키워드 또는 문자 있는지 알고 싶을 때 사용!
     - lastIndexOf 메서드
       - 가장 마지막에 나타난 인덱스
     - slice 메서드
@@ -51,6 +51,7 @@
       - 시작 인덱스만 있어도 됨
       - 마이너스 값 사용 가능
         - 실무) 마지막 특정 문자 확인할 때 유용 (substring 메서드보다 훨씬 편함)
+        - slice(-1)
     - substring 메서드
       - slice 메서드와 기능은 동일하지만 무조건 시작 인덱스, 종료 인덱스 필요
       - 마이너스 값 사용 불가
@@ -58,7 +59,7 @@
       - 시작 인덱스와 길이를 줌
       - 그 길이만큼 잘라냄
       - 잘라낼 대상의 길이 정확히 알 경우 substr 메서드 매우 편함
-      - 실무) 날짜 구분해서 자르기
+        - 실무) 날짜 구분해서 자르기
     - replace 메서드
       - 문자열 내의 특정 문자를 다른 문자로 교체
       - 첫 번째 발견되는 것만 바꿔줌
@@ -89,12 +90,12 @@
   - common.js 파일에 자주 사용할 함수들 미리 만들어놓음
   - 다른 개발자들은 그 js 파일을 import해서 사용 (만약 그 화면에서 필요하면)
   - 해당 화면에서만 사용하는 함수면 해당 js 파일에서 만들어 사용
-  - 만약 공통적으로 사용될 것 같으면 common.js 또는 또 다른 공통 js 파일에 포함
-  - 동일한 이름 함수 여러 개 존재하면 오버라이딩됨
+  - 만약 공통적으로 사용될 것 같으면 common.js 또는 다른 공통 js 파일에 포함
+  - 동일한 이름의 함수가 여러 개 존재하면 오버라이딩됨
 - 처음부터 완벽하게 코드를 짤 수는 없음
   - 필요한 기능 빠르게 구현하고 계속 리팩토링
 - 단순히 사용법이 아니라 메서드 용도를 아는 것이 제일 중요!
-- HTML 상에서 CSS로 lower/upper case로 바꾼 건 화면상에서만 바꾼 것임
+- HTML상에서 CSS로 lower/upper case로 바꾼 건 화면상에서만 바꾼 것임
   - 실제 데이터는 소문자로 저장됨
   - 비교를 위해 str.toUpperCase/toLowerCase 메서드 사용
 
