--- a/boot-camp/note/February/22_02_15_Tue.md
+++ b/boot-camp/note/February/22_02_15_Tue.md
@@ -2,10 +2,25 @@
 
 ## _Vanilla JS_
 
+- 데이터 조회/삭제/생성 실습
+- checkPhone() 함수 자율적 구현
+-
+
 #
 
 ### [Note]
 
+- 데이터 그리드
+  - 정렬, 필터, 엑셀 export 등 다양한 기능 있음
+- checkbox는 체크하거나 해제 => onchange 이벤트가 정확함 (onclick도 되긴 함)
+- 체크한 항목 삭제하면 새로고침되는 이슈 발생 (fetch 함수 사용할 때)
+- 부트스트랩의 그리드 시스템
+- 주소 찾기 API (다음)
+  - DB에는 주소 저장할 때 sigungu, sido 등 여러 컬럼으로 분리해서 저장함
+  - 각 컬럼별로 필터해서 조회할 때 활용 가능
+- 등록자의 ip 주소는 서버상에서만 알 수 있음 (HTML, JS로는 불가)
+- 전화번호 본인확인은 외부 서비스 사용해야 함 (유료, SMS 발송)
+- 이메일 발송은 gmail 이용하면 무료로 가능
 #
 
 ### [Source Code](https://github.com/ding-co/developer-dignity/tree/main/boot-camp/practice/February/day13)
