[ADD] Day 14 - JS 09

--- a/boot-camp/note/February/22_02_17_Thu.md
+++ b/boot-camp/note/February/22_02_17_Thu.md
@@ -2,9 +2,16 @@
 
 ## _Vanilla JS_
 
+- 데이터 수정/추가, 모달 창 실습
+- event
+  - onload (window.addEventListener)
+- 스크롤
+
 #
 
 ### [Note]
+
+- 인라인 JS 방식보다 addEventListener 사용 권장
 
 #
 
