[ADD] Day 15 - JS 10

--- a/boot-camp/note/February/22_02_22_Tue.md
+++ b/boot-camp/note/February/22_02_22_Tue.md
@@ -1,6 +1,30 @@
 # [22.02.22.Tue] - Day 15
 
-## _Vanilla JS_
+## _Vanilla JS (마지막 시간)_
+
+- 이벤트 버블링
+  - 자식 객체 이벤트 발생 후 부모 객체도 이벤트 발생 (이벤트 중복 발생 가능)
+  - 상위 이벤트 실행 막기 위해서 event.stopPropagation() 이용 (이벤트 버블링 막기)
+- 키보드 이벤트
+  - keydown - keypress - keyup 순서로 이벤트 발생
+  - keyup 이벤트 발생 후에 input의 value 가져올 수 있음
+- form
+  - submit은 비동기 방식이 아니라 페이지 전체가 서버로 넘어가버림
+  - SPA에서는 required 속성, email valid check 등 못함
+  - input:text하고 input:email 의미가 없어짐
+  - 따라서 모두 text로 만들어서 처리하는 경우 많음 (form-submit 사용 안하므로)
+  - 하지만 form을 활용하면서 내부적으로는 비동기 방식으로 서버로 전송시키고 싶으면?
+    - form에 onsubmit 속성 달고 event.preventDefault() 활용하면 됨
+- 메모리
+  - 정적인 데이터(문자열, 불, 숫자, ...)는 stack 메모리에 할당됨
+  - 동적인 데이터(배열, 객체, ...)는 heap 메모리에 할당됨
+    - 스택에서는 참조 주소 할당
+    - 배열 복사하고 싶으면 스프레드 연산자 활용
+    - Object.assign() 함수 이용 가능
+    - 과거) JSON.parse(JSON.stringify(arr)) 많이 이용했었음
+- 데이터 그리드 최종 실습
+  - 컬럼명 기준으로 정렬
+    - custom 속성 만들 수 있음
 
 #
 
