--- a/boot-camp/note/February/22_02_15_Tue.md
+++ b/boot-camp/note/February/22_02_15_Tue.md
@@ -12,6 +12,7 @@
   - 정렬, 필터, 엑셀 export 등 다양한 기능 있음
 - checkbox는 체크하거나 해제 => onchange 이벤트가 정확함 (onclick도 되긴 함)
 - 체크한 항목 삭제하면 새로고침되는 이슈 발생 (fetch 함수 사용할 때)
+  - json-server 버그였음
 - 부트스트랩의 그리드 시스템
 - 주소 찾기 API (다음)
   - DB에는 주소 저장할 때 sigungu, sido 등 여러 컬럼으로 분리해서 저장함
