--- a/boot-camp/note/February/22_02_23_Wed.md
+++ b/boot-camp/note/February/22_02_23_Wed.md
@@ -1,10 +1,35 @@
 # [22.02.16.Wed] - Day 16
 
-##
+## _BootStrap 1_
+
+- Bootstrap
+
+  - twitter에서 생태계 기여
+  - CSS 디자인 프레임워크
+  - 반응형 웹 너무 쉽게 만들 수 있음
+  - 12 그리드 시스템
+
+- 웹 개발에서 중요한 것
+  - label - for id 값 연결
+  - html 표준 속성
+    - aria-describedby
 
 #
 
 ### [Note]
+
+- 참고
+  - oninput 속성
+    - 사용자가 값 입력하는 순간 발생
+    - form 태그 안에서 사용
+  - email.validationMessage 프로퍼티
+- 테일윈드
+- ARIA; Accessible Rich Internet Application
+  - 시각 장애인분들을 위해서 시각적인 웹 접근성 제공
+  - 접근성을 위한 웹 표준
+  - html aria 꼭 학습하기!
+- 프린트 할 때만 감춰야 하는 컴포넌트 있음
+  - display: none;
 
 #
 
