[ADD] Day 17 - BootStrap 2

--- a/boot-camp/note/February/22_02_24_Thu.md
+++ b/boot-camp/note/February/22_02_24_Thu.md
@@ -1,10 +1,25 @@
 # [22.02.24.Thu] - Day 17
 
-##
+## _BootStrap_
+
+- 부트스트랩 디자인 적용 실습
+  - dom_create
+  - dom_submit, dom_modal
 
 #
 
 ### [Note]
+
+- label hidden 처리하고 input 태그와 id 연동시킬 수 있음
+  - 스크린 리더기가 label 태그 해석함
+- 부트스트랩 테마 사이트
+  - WrapBootstrap, ...
+- 대시보드/BI/EIC
+  - 집계
+- Vue.js가 웹 표준에 훨씬 가까운 프레임워크임
+  - 러닝 커브 빠름
+  - html/css/js 명확히 코드 분리해서 작업 가능
+  - 웹 표준 잘 지킴
 
 #
 
