[ADD] Day 18 - Vue 1

--- a/boot-camp/note/March/22_03_01_Tue.md
+++ b/boot-camp/note/March/22_03_01_Tue.md
@@ -2,11 +2,23 @@
 
 ## _Vue.js_
 
+- Vue ClI
+  - 명령어 하나로 Vue 표준 프로젝트 만들어줌 (필요한 핵심 파일 자동 생성)
+- 프로젝트의 대부분은 Vue 2버전
+  - Vue 3버전에서 많은 것이 추가됐지만, Vue 3 지원하지 않는 프로젝트 아직 많음
+
 #
 
 ### [Note]
 
--
+- 바벨
+  - JS 최신 코드로 짜더라도 구버전이랑 호환할 수 있게 해줌
+- TS
+  - JS의 Super set
+- PWA
+  - 모바일 흡사 웹 만들어줌
+- package.json
+  - 프로젝트에 대한 설명이 다 들어가 있음
 
 #
 
