[ADD] Day 19 - Vue 2

--- a/boot-camp/note/March/22_03_02_Wed.md
+++ b/boot-camp/note/March/22_03_02_Wed.md
@@ -2,12 +2,33 @@
 
 ## _Vue.js_
 
+- input 태그의 v-model은 input의 value 속성으로 양방향 바인딩됨
+- select box도 value 값 직접 변경함 (양방향 데이터 바인딩)
+- checkbox는 value 값은 변경되지 않고 checked 속성으로 양방향 데이터 바인딩
+  - value 속성으로 양방향 데이터 바인딩 되는 것이 아님
+  - checked가 true인 것들 자동으로 Vue가 가져와줌
+  - 순서도 보장됨
+  - 여러 개 선택 가능
+  - 타입은 배열
+- radio 버튼
+  - 여러 개 중 하나 선택
+  - 타입은 문자열
+  - checked 속성 이용해서 2-way data binding
+- 단방향 바인딩 하고 싶으면?
+  - JS -> HTML (속성으로 단방향 바인딩)
+  - img 태그는 무조건 단방향 바인딩
+    - 절대 경로에 있는 이미지는 데이터 바인딩 그대로 들어오지만,
+    - 상대 경로(로컬)에 있는 이미지는 그대로 안들어옴 (다른 방법 필요)
+- 스타일
+
 #
 
 ### [Note]
 
--
+- 코드 -> day 18 폴더 참고
+- 양방향 바인딩만 표현식 사용 못하고 단방향은 모두 표현식 사용 가능
+- 로컬에 있는 파일 데이터 바인딩
 
 #
 
-### [Source Code](https://github.com/ding-co/developer-dignity/tree/main/boot-camp/practice/March/day19)
+### [Source Code](https://github.com/ding-co/developer-dignity/tree/main/boot-camp/practice/March/day18)
