[ADD] Day 23 - Vue 6

--- a/boot-camp/note/March/22_03_15_Tue.md
+++ b/boot-camp/note/March/22_03_15_Tue.md
@@ -2,12 +2,30 @@
 
 ## _Vue.js_
 
+- mixin
+  - 하나로 결합됨
+  - 함수뿐만 아니라 데이터, Life cycle 등 다 활용 가능
+  - ex) Axios, ...
+- plugin
+  - 설치함
+  - 함수만 활용 가능
+  - ex) i18n
+    - 다국어 지원
+    - 태그도 사용하고 싶으면 v-html directive 활용
+
 #
 
 ### [Note]
 
--
+- mixin 실습
+  - date formatter
+  - currency formatter
+- UX
+  - global mixin 활용해서 컴포넌트 mounted, unmounted 될 때마다 컴포넌트 사용 시간 등 로그를 db에 저장 가능
+    - 어떤 메뉴를 클릭했는지 path 기록
+    - 화면마다 체류 시간을 측정해서 사용자 행동 패턴 분석 가능
+    - 실제로는 router 파일을 활용함
 
 #
 
-### [Source Code](https://github.com/ding-co/developer-dignity/tree/main/boot-camp/practice/March/day23)
+### [Source Code](https://github.com/ding-co/developer-dignity/tree/main/boot-camp/practice/March/day18)
