[ADD] Day 27 - Vue 10

--- a/boot-camp/note/March/22_03_24_Thu.md
+++ b/boot-camp/note/March/22_03_24_Thu.md
@@ -2,11 +2,26 @@
 
 ## _Vue.js_
 
+- UI 패턴 실습
+  - Single Edit 패턴 (SingleEditView)
+  - Multi Edit 패턴 (MultipleEditView)
+  - Master Detail 패턴 (MasterDetailView)
+    - 페이징은 보통 서버에서 처리
+  - Shuttle 패턴 (ShuttleView)
+    - 페이징 처리
+    - 실무 예제
+      - A 부서 -> B 부서 변경
+      - 상품 카테고리 변경
+      - 사용자 권한 변경
+
 #
 
 ### [Note]
 
--
+- 기업 내부 시스템 (백 오피스 시스템)
+- Vue.js
+  - 양방향 데이터 바인딩이므로 객체 깊은 복사해야 함
+  - Vue.js가 반응(인지) 못함
 
 #
 
