[ADD] Day 28 - Database 1

--- a/boot-camp/note/March/22_03_29_Tue.md
+++ b/boot-camp/note/March/22_03_29_Tue.md
@@ -2,14 +2,224 @@
 
 ## _Database_
 
--
+- DB 예제
+  - 고객 데이터 (테이블, 엑셀 시트)
+    - 고객번호 (cf. id로 해도 됨)
+      - 숫자 (PK)
+    - 고객명
+      - 문자
+    - 주소
+      - 문자
+    - 연락처
+      - 문자
+    - 비밀번호
+    - 비밀번호 변경시간
+      - datetime
+    - 고객 접속시간
+      - datetime
+  - 제품 데이터
+    - 제품번호
+      - 숫자 (PK)
+    - 제품명
+      - 문자
+    - 제품분류
+      - 숫자(FK)
+    - 공급처
+      - 숫자(FK)
+    - 단가
+      - 숫자
+    - 재고수
+      - 숫자
+    - 제품 대표 사진 (개수 한정시 컬럼으로 추가 가능, 제품사진만 따로 관리 가능)
+      - 문자 (url 주소)
+    - 제품 썸네일 사진
+    - 제품사진1
+    - 제품사진2
+    - 제품사진3
+  - 제품사진 데이터
+    - 제품번호
+      - 숫자 (PK)
+    - 제품사진 URL
+      - 문자 (url)
+    - 사진 구분
+      - 문자
+  - 배송업체 데이터
+    - 배송업체코드
+      - 숫자 (PK)
+    - 배송업체명
+      - 문자
+    - 전화번호
+      - 문자
+    - 주소 (소재지)
+      - 문자
+    - 배송가능여부
+    - 사업자등록번호
+    - 대표자명
+  - 영업담당자 데이터
+    - 사원번호
+      - 숫자 (PK)
+    - 이름
+      - 문자
+    - 전화번호
+      - 문자
+    - 직급
+  - 제품분류 데이터
+    - 제품분류코드
+      - 숫자 (PK)
+    - 제품분류명
+      - 문자
+    - 설명
+      - 문자
+  - 공급처 데이터
+    - 공급처코드
+      - 숫자 (PK)
+    - 공급처명
+      - 문자
+    - 전화번호
+      - 문자
+    - 주소
+      - 문자
+    - 담당자
+      - 숫자(FK)
+    - 담당자 이메일
+    - 담당자 연락처
+    - 사업자등록번호
+    - 대표자명
+  - 주문상세 데이터
+    - 고객번호
+      - 숫자 (PK)
+      - 동명이인 구별 위함
+    - 고객명
+      - 문자
+    - 주문번호
+      - 숫자 (FK)
+    - 주문날짜
+      - datetime
+    - 배송지 주소
+      - 문자
+    - 연락처
+      - 문자
+    - 배송업체
+      - 숫자 (FK)
+    - 영업담당자
+      - 숫자 (FK)
+  - 주문-제품목록 데이터
+    - 주문번호 (고객, 제품 테이블)
+      - 숫자 (PK)
+    - 제품번호
+      - 숫자 (FK)
+    - 제품명
+      - 문자
+    - 제품분류
+      - 숫자 (FK)
+    - 공급처
+      - 숫자 (FK)
+    - 주문수량
+      - 숫자
+    - 가격
+      - 숫자
+    - 합계
+      - 숫자
+- 위 DB 구조에 대한 화면 리스트
+  - 고객 목록
+  - 고객 상세
+  - 고객 등록 (회사 주도)
+  - 고객 수정
+  - 배송업체 목록
+  - 배송업체 상세
+  - 배송업체 등록(생성)
+  - 영업담당자 목록
+  - 영업담당자 등록
+  - 영업담당자 상세
+  - 영업담당자 수정
+  - 제품분류 관리 (multiple edit 패턴, 컬럼/필드 별로 없는 데이터 케이스)
+    - 제품분류 목록/등록/수정/삭제
+  - 제품 목록
+  - 제품 상세
+  - 제품 등록
+  - 제품 수정
+  - 주문 목록
+  - 주문 상세
+  - 주문 생성
+  - 주문 수정
+  - 공급처 목록
+  - 공급처 수정
+  - 공급처 상세
+  - 공급처 등록
 
 #
 
 ### [Note]
 
--
+- 데이터 구조 설계 및 바라보는 관점
+- 가장 먼저 봐야 하는 화면은 주문 상세 항목 데이터
+  - 상세 화면을 가지고 주문 생성 화면 등 만듦
+  - 모든 데이터 설계 기본 시작은 상세 화면 데이터!
+- DB 기본 생성 목적은 여러 사람들과 공유하기 위함
+  - 데이터 관리 체계적, 쉽고 빠르게 가공 가능
+- 엑셀도 DB와 형식 동일
+- 엑셀 시트 (테이블)
+- 기획자로부터 와이어프레임을 받으면 항상 선행적으로 존재해야 하는 데이터가 있음
+  - 주문 상세 데이터 예시
+- 지역별 배송업체 데이터 시트 생성해서 관리 가능
+- 제품 상세, 주문 목록, 주문 상세, ...
+- 컬럼이 별로 없는 데이터 같은 경우는 multiple edit 패턴으로 만들어질 가능성 높음
+- 가장 핵심이 되는 메인 프로세스는 주문 상세 데이터!
+  - 핵심이 되는 화면을 먼저 기획하고 그에 따라 다른 테이블 설계
+- 제품 사진을 제품 테이블에 컬럼을 추가해서 넣어놓으면 조인 횟수가 적어서 좋을 수도 있음
+  - 하지만 이후 제품 사진 개수를 제한하지 않고 여러 개 추가하는 것이 필요하다면 따로 테이블로 빼는 것이 나을 수도 있음
+  - 정답은 없음
+- 스키마
+  - DB를 시스템별로 구분
+  - 관련있는 테이블끼리 묶어놓은 곳
+  - 스키마별로 유저 권한 부여 가능
+- 테이블
+  - 컬럼
+  - 데이터
+- DB 실행하는 스크립트 언어
+  - SQL
+  - Structured Query Language
+- PK (Primary Key)
+  - record unqiue하게 만들어주는 컬럼
+- NN (Not Null)
+  - 반드시 값이 있어야 함
+- AI (Auto Increment)
+  - 자동으로 번호 만들어줌
+- UN (Unsigned)
+  - 부호가 없는
+  - 양수만
+- UQ (Unique)
+  - PK는 아니지만 중복된 값이 있으면 안됨!
+- Datatype
+  - 컬럼 타입
+  - int (정수)
+  - varchar
+    - mysql은 글자수 (DBMS별로 다름)
+    - 적당히 제한하는 것이 좋음
+- RDBMS (Relational DataBase Management System)
+  - 참조 무결성 중요!!
+- 한자리 관련 타입
+  - varchar(1)
+  - int(1)
+  - enum('A', 'B')
+- 소수점은 Decimal
+- 기본적으로 created_datetime, created_userid 컬럼 다 있음
+- order_header, order_detail 테이블로 주문 데이터 관리
+- 클릭율, 주문 횟수 등 데이터 보면서 고객이 주문하는데 갈등하는지 등 파악해서 <br/>
+  구매 유도 전략 만듦 (마케팅)
+- 눈에 보이지 않는 데이터로 가치 창출 가능
+- 인메모리 DB
+  - 내부적으로 RAM 같은 인 메모리 이용
+- 메모리 캐시
+  - 레디스
+- 테이블별로 불필요한 키 없이 필요한 키만 가지도록 세분화해서 잘 분할하는 설계 중요
 
 #
 
-### [Source Code](https://github.com/ding-co/developer-dignity/tree/main/boot-camp/practice/March/day28)
+[Q&A]
+
+- 제품 사진 필드 하나에 url을 리스트 형식으로도 여러 개 담아놓을 수 있나요?
+  - JSON 등 데이터타입 있지만 권장하지 않음
+  - 문자열로 연결해서 저장 가능...
+
+### [SQL file](https://github.com/ding-co/developer-dignity/tree/main/boot-camp/practice/March/day28)
