[ADD] Day 29 - Database 2

--- a/boot-camp/note/March/22_03_30_Wed.md
+++ b/boot-camp/note/March/22_03_30_Wed.md
@@ -2,13 +2,66 @@
 
 ## _Database_
 
--
+- SQL
+  - Structured Query Language
+  - SQL를 이용하여 CRUD 작업 수행
+  - SELECT (데이터 조회)
+    - WHERE 조건절
+      - AND
+      - OR
+      - NOT
+    - ORDER BY (정렬)
+      - ASC (default, 생략 가능)
+      - DESC (역순)
+      - 여러 개 작성하면 순차적으로 정렬
+    - LIKE 검색
+      - %abc
+      - abc%
+      - %Abc%
+      - \_는 1문자 의미
+    - IN
+      - 동적으로 변하는 값
+      - 하나만 선택하는 것이 아니라 조건이 계속 바뀔 때 활용 가능 (사용자 선택)
+      - NOT IN
+    - BETWEEN
+      - 이상, 이하
+      - NOT BETWEEN
+    - LIMIT
+      - 숫자, 숫자 (앞 숫자 인덱스부터 뒤 숫자 limit 개수만큼)
+      - 페이징 처리 팁) 앞 숫자를 (Page 번호 - 1) \* 한 페이지에 보여지는 수 로 세팅, 뒤 숫자는 고정
+      - 활용) 검색어 순위, 페이징 처리, ...
+    - MIN, MAX, AVG
+    - COUNT(\*)
+    - GROUP BY
+      - ex) 국가별 고객 수
+  - INSERT INTO
+  - UPDATE SET WHERE
+  - DELETE FROM WHERE
+  - JOIN
+    - INNER JOIN
+      - 반드시 양쪽에 있는 것만 나옴
+      - 편리하게 테이블, 테이블 하고 WHERE 조건절 이용해서 처리함
+    - LEFT OUTER JOIN
+      - 왼쪽에 있는 값은 무조건 다 나옴 (오른쪽은 있는 것만 나옴)
+    - RIGHT OUTER JOIN
+      - 오른쪽에 있는 값은 무조건 다 나옴 (왼쪽은 있는 것만 나옴)
+    - CROSS JOIN
 
 #
 
 ### [Note]
 
--
+- MySQL
+  - RDBMS
+  - 무료
+- 인덱싱은 반드시 성능 중요할 것 같은 컬럼에만 별도 처리! (메모리 별도 올라감)
+- w3scools.com 참고
+- 데이터 삭제할 때 active_yn 컬럼 이용해서 update 처리할 수도 있음
+  - 사용자가 삭제한 이후 회사 차원에서 보관할 만한 가치가 있는 데이터는 따로 이용 가능
+  - 물론 사용자 개인정보 침해 하지 않는 선에서
+- AS (Alias)
+- cross join (cartesian product)
+- 넷플릭스 DB 설계 및 구조 이해하기
 
 #
 
