[ADD] Day 30 - Database 3

--- a/boot-camp/note/March/22_03_31_Thu.md
+++ b/boot-camp/note/March/22_03_31_Thu.md
@@ -2,14 +2,18 @@
 
 ## _Database_
 
--
+- 실제 서비스 데이터베이스 살펴보기 (가장 중요한 시간!)
+  - 데이터가 어떻게 존재하고 활용되는지 직관력 향상시키기
+- 분석 연습
+  - 당근마켓
+  - 넷플릭스
 
 #
 
 ### [Note]
 
--
-
-#
-
-### [Source Code](https://github.com/ding-co/developer-dignity/tree/main/boot-camp/practice/March/day30)
+- 상세화면을 봐야 데이터베이스 구조 빠르게 파악 가능!
+- 맥북 마그넷 응용 프로그램 추천 (단축키를 이용하여 화면 분할 편리)
+- delete row 하지 않고 사용 여부를 N으로 바꿔서 나중에 활용 가능 (플래그)
+- 실제 서비스 데이터베이스 구조 살펴보면서 블로그에 올리는 것도 좋은 포트폴리오화 가능
+- MySQL ERD 실습 필요
