[ADD] Day 31 - Node.js 01

--- a/boot-camp/note/April/22_04_05_Tue.md
+++ b/boot-camp/note/April/22_04_05_Tue.md
@@ -2,13 +2,39 @@
 
 ## _Node.js_
 
--
+- JS로 실행할 수 있는 런타임 환경
+- 싱글 스레드
+- 논블로킹 I/O
+- 이벤트 루프
+
+### _Node.js 연습_
+
+- hello world
+- console
+- calculate
+  - module
+- timer
+- process
+- path
+- url
+- crypto
+- file
+
+### _웹 서버 만들기 실습_
+
+- express 모듈
+  - 웹 서버 빠르게 만들어줌
+- mysql 모듈
+  - DB 연동하여 select, insert 문 실습 테스트
 
 #
 
 ### [Note]
 
--
+- 노드 프로세스 강제 종료
+  - process.exit();
+  - 참고 예제) 관리자 초기 환경 세팅 등록 후 웹 서버 강제 종료할 때 사용 가능
+  - 로그 남길 때도 활용 가능 (for 문제 발생 원인 찾기)
 
 #
 
