--- a/boot-camp/note/April/22_04_13_Wed.md
+++ b/boot-camp/note/April/22_04_13_Wed.md
@@ -2,14 +2,40 @@
 
 ## _Node.js_
 
--
+- job scheduler 실습
+  - 정해진 날짜/시분초 어떤 작업을 수행하라고 미리 등록해 놓는 것
+  - 특정 주기마다 어떤 작업을 수행하라고 미리 등록해 놓는 것
+    - 데이터 백업: 매일 밤 12시, 새벽 1시, ... 사용자가 시스템을 사용하지 않는 시간동안 중요한 데이터/파일 백업
+    - 정기 리포트: 매일, 매주, 매월 특정 시간에 특정 기간동안 생성된 데이터를 리포트(표/ 엑셀)로 담당자에게 전달
+    - 일정 관리: 등록된 일정에 맞춰서 알림 전송
+  - node-cron 모듈
+  - nodemailer
+  - crawling
+- xlsx
+  - read_write
+  - write (가상 엑셀 파일)
+  - download (물리적 엑셀 파일 없이 가상 엑셀 파일 생성 후 다운로드)
+  - nodemailer (엑셀 파일 첨부)
+  - js, style
+  - cors
+    - cross origin resource sharing
+    - Origin - URL 구조의 프로토콜, 호스트, 포트 합친 것
+  - websocket
+    - 클라이언트와 서버의 양방향 통신
+    - http (기본 내장)
+    - socket.io
 
 #
 
 ### [Note]
 
--
+- 클라이언트 서버, 백엔드 서버 각각 독립적으로 개발 (웹 서버)
+  - 자원 요청한 곳과 요청 받는 곳 도메인이나 포트 다르면 자원 공유 못하게 막아버림
+  - cors 처리 필요
+- 클라이언트/백엔드 하나의 서버로 개발
+- HTTP; 단방향 통신
+- webrtc; 클라이언트-클라이언트 1:1 연결
 
 #
 
-### [Source Code](https://github.com/ding-co/developer-dignity/tree/main/boot-camp/practice/April/day34)
+### [Source Code](https://github.com/ding-co/developer-dignity/tree/main/boot-camp/practice/April/day31)
